@@ -1,22 +1,16 @@
 package org.openstreetmap.josm.plugins.scripting.model;
 
-import static org.openstreetmap.josm.tools.I18n.tr;
-
-import java.text.MessageFormat;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.logging.Logger;
+import org.openstreetmap.josm.data.Preferences;
+import org.openstreetmap.josm.plugins.scripting.graalvm.GraalVMFacadeFactory;
 
 import javax.script.ScriptEngineFactory;
 import javax.validation.constraints.NotNull;
+import java.text.MessageFormat;
+import java.util.*;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
-import org.openstreetmap.josm.data.Preferences;
+import static org.openstreetmap.josm.tools.I18n.tr;
 
 /**
  * Describes a scripting engine used in the scripting plugin.
@@ -78,11 +72,13 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
         }
     }
 
-    private ScriptEngineType engineType;
-    private String engineId;
+    private final ScriptEngineType engineType;
+    private final String engineId;
     private String languageName = null;
+    private String languageVersion = null;
     private String engineName = null;
-    private final List<String> contentMimeTypes = new ArrayList<>();
+    private String engineVersion = null;
+    private final HashSet<String> contentMimeTypes = new HashSet<>();
 
     /**
      * The default script engine descriptor. Refers to the embedded script
@@ -90,25 +86,20 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
      */
     static public final ScriptEngineDescriptor DEFAULT_SCRIPT_ENGINE =
         new ScriptEngineDescriptor(
-            ScriptEngineType.EMBEDDED,
-            "rhino",
-            "JavaScript",
-            "Mozilla Rhino",
-            "text/javascript"
+            ScriptEngineType.EMBEDDED,  // engineType
+            "rhino",                    // engineId
+            "Mozilla Rhino",            // engineName
+            "JavaScript",               // languageName
+            "text/javascript"           // contentType
         );
 
     /**
      * An unmodifiable map of embedded script engines (currently only one entry
      * for the embedded engine based on Mozilla Rhino)
      */
-    static public final Map<String, ScriptEngineDescriptor>
-        EMBEDDED_SCRIPT_ENGINES;
-    static {
-         HashMap<String, ScriptEngineDescriptor> m = new HashMap<>();
-         m.put(DEFAULT_SCRIPT_ENGINE.getEngineId(), DEFAULT_SCRIPT_ENGINE);
-         EMBEDDED_SCRIPT_ENGINES = Collections.unmodifiableMap(m);
-    }
-
+    static public final Map<String, ScriptEngineDescriptor> EMBEDDED_SCRIPT_ENGINES = Map.of(
+            DEFAULT_SCRIPT_ENGINE.getEngineId(),
+            DEFAULT_SCRIPT_ENGINE);
 
     /**
      * <p>Replies a script engine descriptor derived from a preference value
@@ -117,6 +108,7 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
      * @return the scripting engine descriptor
      * @see #buildFromPreferences(Preferences)
      */
+    @SuppressWarnings("unused")
     static public ScriptEngineDescriptor buildFromPreferences(){
         return buildFromPreferences(Preferences.main());
     }
@@ -162,7 +154,7 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
             // versions. No attempt to recover from these values, when this
             // code goes productive, former preference values are automatically
             // reset to the current default scripting engine.
-            System.out.println(tr("Warning: preference with key ''{0}'' "
+            logger.warning(tr("preference with key ''{0}'' "
                 + "consist of an unsupported value. Expected pattern "
                 + "''type/id'', got ''{1}''. Assuming default scripting engine.",
                 PREF_KEY_SCRIPTING_ENGINE, preferenceValue));
@@ -174,59 +166,94 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
         String engineId = preferenceValue.substring(i+1);
         switch(type){
             case EMBEDDED:
-                if (engineId == null) return DEFAULT_SCRIPT_ENGINE;
                 engineId = engineId.trim().toLowerCase();
                 final ScriptEngineDescriptor desc =
-                        EMBEDDED_SCRIPT_ENGINES.get(engineId);
+                    EMBEDDED_SCRIPT_ENGINES.get(engineId);
                 if (desc == null) {
-                    System.out.println(tr("Warning: preference with key ''{0}''"
-                            + " refers to an unsupported embedded scripting "
-                            + "engine with id ''{1}''. "
-                            + "Assuming default scripting engine.",
-                            PREF_KEY_SCRIPTING_ENGINE, engineId));
+                    logger.warning(tr("preference with key ''{0}'' "
+                        + "refers to an unsupported embedded scripting "
+                        + "engine with id ''{1}''. "
+                        + "Assuming default scripting engine.",
+                        PREF_KEY_SCRIPTING_ENGINE, engineId));
                     return DEFAULT_SCRIPT_ENGINE;
                 }
                 return desc;
+
             case PLUGGED:
-                //don't lowercase. Lookup in ScriptEngineManager could be case
-                //sensitive
+                // don't lowercase. Lookup in ScriptEngineManager could be
+                // case-sensitive
                 engineId = engineId.trim();
+                logger.log(Level.FINE, MessageFormat.format(
+                    "buildFromPreferences: engineId={1}",
+                    engineId));
                 if (!JSR223ScriptEngineProvider.getInstance()
                         .hasEngineWithName(engineId)) {
-                    System.out.println(tr("Warning: preference with key ''{0}''"
-                            + " refers to an unsupported JSR223 compatible "
-                            + " scripting engine with id ''{1}''. "
-                            + " Assuming default scripting engine.",
-                            PREF_KEY_SCRIPTING_ENGINE,
-                            engineId));
+                    logger.warning(tr("preference with key ''{0}''"
+                        + " refers to an unsupported JSR223 compatible "
+                        + " scripting engine with id ''{1}''. "
+                        + " Assuming default scripting engine.",
+                        PREF_KEY_SCRIPTING_ENGINE,
+                        engineId));
                     return DEFAULT_SCRIPT_ENGINE;
                 }
-                return new ScriptEngineDescriptor(ScriptEngineType.PLUGGED,
-                        engineId);
+                return new ScriptEngineDescriptor(ScriptEngineType.PLUGGED, engineId);
 
             case GRAALVM:
-                // TODO(karl): handle GraalVM
+                if (!GraalVMFacadeFactory.isGraalVMPresent()) {
+                    logger.warning(tr("preferences with key ''{0}'' refers to an "
+                        + "GraalVM engine, but currently the GraalVM isn''t present "
+                        + "on the classpath. Assuming default scripting engine.",
+                        PREF_KEY_SCRIPTING_ENGINE
+                    ));
+                    return DEFAULT_SCRIPT_ENGINE;
+                }
+                final String id = engineId;
+                final var engine = GraalVMFacadeFactory.getOrCreateGraalVMFacade()
+                    .getScriptEngineDescriptors().stream().filter(d ->
+                        d.getEngineId().equalsIgnoreCase(id)
+                    )
+                    .findFirst();
+                if (engine.isEmpty()) {
+                    logger.warning(tr("preference with key ''{0}'' refers to an GraalVM engine "
+                        + "with id''{1}''. The GraalVM for this language is currently not "
+                        + "present. Assuming default scripting engine.",
+                        PREF_KEY_SCRIPTING_ENGINE,
+                        id
+                    ));
+                    return DEFAULT_SCRIPT_ENGINE;
+                } else {
+                    return engine.get();
+                }
+
+            default:
+                // shouldn't happen
+                throw new IllegalStateException(String.format(
+                    "unexpected scripting engine type '%s'", type
+                ));
         }
-        return DEFAULT_SCRIPT_ENGINE;
     }
 
     protected void initParametersForJSR223Engine(String engineId) {
         ScriptEngineFactory factory = JSR223ScriptEngineProvider.getInstance()
                 .getScriptFactoryByName(engineId);
-        if (factory == null){
-            this.languageName = null;
-            this.engineName = null;
-            this.contentMimeTypes.clear();
-            return;
-        }
         initParametersForJSR223Engine(factory);
     }
 
     protected void initParametersForJSR223Engine(ScriptEngineFactory factory) {
-        this.languageName = factory.getLanguageName();
-        this.engineName = factory.getEngineName();
-        this.contentMimeTypes.clear();
-        this.contentMimeTypes.addAll(factory.getMimeTypes());
+        if (factory == null){
+            this.languageName = null;
+            this.languageVersion = null;
+            this.engineName = null;
+            this.contentMimeTypes.clear();
+            this.engineVersion = null;
+        } else {
+            this.languageName = factory.getLanguageName();
+            this.languageVersion = factory.getLanguageVersion();
+            this.engineName = factory.getEngineName();
+            this.contentMimeTypes.clear();
+            this.contentMimeTypes.addAll(factory.getMimeTypes());
+            this.engineVersion = factory.getEngineVersion();
+        }
     }
 
     /**
@@ -268,9 +295,32 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
      * @param contentType the content type of the script sources. Ignored
      *   if null.
      */
-    public ScriptEngineDescriptor(@NotNull ScriptEngineType engineType,
+    public ScriptEngineDescriptor(
+            @NotNull ScriptEngineType engineType,
             @NotNull String engineId,
-            String languageName, String engineName, String contentType) {
+            String engineName, String languageName,  String contentType) {
+        this(engineType, engineId, engineName, languageName, contentType,
+                null /* engineVersion */,
+                null /* languageVersion */);
+    }
+
+    /**
+     * Creates a new descriptor.
+     *
+     * @param engineType the engine type. Must not be null.
+     * @param engineId the engine id. Must not be null.
+     * @param languageName the name of the scripting language. May be null.
+     * @param engineName the name of the scripting engine. May be null.
+     * @param contentType the content type of the script sources. Ignored
+     *   if null.
+     * @param engineVersion the version of the engine
+     * @param languageVersion the version the language
+     */
+    public ScriptEngineDescriptor(
+            @NotNull ScriptEngineType engineType,
+            @NotNull String engineId,
+            String engineName, String languageName, String contentType,
+            String engineVersion, String languageVersion) {
         Objects.requireNonNull(engineType);
         Objects.requireNonNull(engineId);
         this.engineId = engineId;
@@ -280,35 +330,40 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
         if (contentType != null) {
             this.contentMimeTypes.add(contentType.trim());
         }
+        this.engineVersion = engineVersion;
+        this.languageVersion = languageVersion;
     }
-
     /**
      * Creates a new descriptor given a factory for JSR223-compatible script
      * engines.
      *
      * @param factory the factory. Must not be null.
      */
-    public ScriptEngineDescriptor(@NotNull ScriptEngineFactory factory) {
+    public ScriptEngineDescriptor(@NotNull final ScriptEngineFactory factory) {
         Objects.requireNonNull(factory);
         this.engineType = ScriptEngineType.PLUGGED;
-        final List<String> engineNames = factory.getNames();
+        final var engineNames = factory.getNames();
         if (engineNames == null || engineNames.isEmpty()) {
             logger.warning(MessageFormat.format("script engine factory ''{0}''"
-                    + " doesn''t provide an engine id. "
-                    + "Using engine name ''{1}'' instead.",
-                    factory.getEngineName()));
+                + " doesn''t provide engine names. Using engine factory name ''{0}'' instead.",
+                factory.getEngineName()));
             this.engineId = factory.getEngineName();
+            this.engineName = factory.getEngineName();
         } else {
-            // use the first of the provided names as ID
+            // use the first of the provided names as ID and engine name
             this.engineId = engineNames.get(0);
+            if (factory.getEngineName() != null) {
+                this.engineName = factory.getEngineName();
+            } else {
+                this.engineName = engineNames.get(0);
+            }
         }
-        this.engineId = factory.getNames().get(0);
         initParametersForJSR223Engine(factory);
     }
 
     /**
      * Replies true, if this is the descriptor for the default scripting engine.
-     * @return
+     * @return true, if this is the descriptor for the default scripting engine.
      */
     public boolean isDefault() {
         return this.equals(DEFAULT_SCRIPT_ENGINE);
@@ -317,7 +372,7 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
     /**
      * Replies the engine id
      *
-     * @return
+     * @return the engine id
      */
     public String getEngineId() {
         return engineId;
@@ -326,7 +381,7 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
     /**
      * Replies the engine type
      *
-     * @return
+     * @return engine type
      */
     public ScriptEngineType getEngineType() {
         return engineType;
@@ -365,13 +420,41 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
     }
 
     /**
+     * Replies the version of the scripting engine, if it is known.
+     *
+     * @return the version of the scripting engine
+     */
+    public Optional<String> getEngineVersion() {
+        return Optional.ofNullable(engineVersion);
+    }
+
+    /**
+     * Replies the language version, if it is known.
+     *
+     * @return the language version
+     */
+    public Optional<String> getLanguageVersion() {
+        return Optional.ofNullable(languageVersion);
+    }
+
+    /**
      * Replies the content types of the script source
      *
      * @return the content types. An unmodifiable list. An empty list, if no
      *  content types are known.
      */
-    public List<String> getContentMimeTypes() {
-        return Collections.unmodifiableList(contentMimeTypes);
+    public Set<String> getContentMimeTypes() {
+        return Collections.unmodifiableSet(contentMimeTypes);
+    }
+
+    /**
+     * Sets the content mime types of the script source
+     *
+     * @param mimeTypes the content mime types
+     */
+    public void setContentMimeTypes(@NotNull Collection<String> mimeTypes) {
+        this.contentMimeTypes.clear();
+        this.contentMimeTypes.addAll(mimeTypes);
     }
 
     public String toString() {
@@ -403,8 +486,6 @@ public class ScriptEngineDescriptor implements PreferenceKeys {
                 return false;
         } else if (!engineId.equals(other.engineId))
             return false;
-        if (engineType != other.engineType)
-            return false;
-        return true;
+        return engineType == other.engineType;
     }
 }
